syntax = "proto3";

package manager.v1;

option go_package = "github.com/ryotarai/code-bridge/gen/manager/v1;managerv1";

message Session {
  string id = 1;
  string key = 2;
}

enum SessionState {
  SESSION_STATE_UNSPECIFIED = 0;
  SESSION_STATE_STARTING = 1;
  SESSION_STATE_RUNNING = 2;
  SESSION_STATE_FINISHED = 3;
  SESSION_STATE_FAILED = 4;
}

message CreateClaudeCodeLogRequest {
    string payload_json = 1;
    Session session = 2;
}

message CreateClaudeCodeLogResponse {
}

message CreateProgressMessageRequest {
  string text = 1;
  Session session = 2;
}

message CreateProgressMessageResponse {
}

message CreateToolApprovalRequestRequest {
  string request_id = 1;
  string tool_name = 2;
  string input = 3;
  Session session = 4;
}

message CreateToolApprovalRequestResponse {
}

message UpdateSessionStateRequest {
  Session session = 1;
  SessionState state = 2;
  string message = 3;
}

message UpdateSessionStateResponse {
}

service ManagerService {
  rpc CreateClaudeCodeLog(CreateClaudeCodeLogRequest) returns (CreateClaudeCodeLogResponse) {}
  rpc CreateProgressMessage(CreateProgressMessageRequest) returns (CreateProgressMessageResponse) {}
  rpc CreateToolApprovalRequest(CreateToolApprovalRequestRequest) returns (CreateToolApprovalRequestResponse) {}
  rpc UpdateSessionState(UpdateSessionStateRequest) returns (UpdateSessionStateResponse) {}
}
